--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,11 @@ on: [push, pull_request]
 
 env:
   BUILD_DIR: _build
+  LINUX_INTEL_COMPONENTS: >-
+    intel-oneapi-compiler-fortran-2021.2.0
+    intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic-2021.2.0
+    intel-oneapi-mkl-2021.2.0
+    intel-oneapi-mkl-devel-2021.2.0
 
 jobs:
   build:
@@ -62,7 +67,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Install GCC (OSX)
+    - name: Link pre-installed GCC and FC (macOS)
       if: ${{ contains(matrix.os, 'macos') && matrix.compiler == 'gnu' }}
       run: |
         gfortran_path=$( which gfortran-${{ env.GCC_V }} )
@@ -123,10 +128,18 @@ jobs:
         path: /opt/intel/oneapi
         key: install-${{ matrix.compiler }}-${{ matrix.version }}-${{ matrix.os }}
 
-    - name: Install Intel
-      if: ${{ contains(matrix.compiler, 'intel') && steps.cache-install.outputs.cache-hit != 'true' }}
+    - name: Install Intel (Linux)
+      if: ${{ contains(matrix.os, 'ubuntu') && contains(matrix.compiler, 'intel') && steps.cache-install.outputs.cache-hit != 'true' }}
       run: |
-        bash assets/ci/setup-intel.sh
+        wget https://apt.repos.intel.com/intel-gpg-keys/${{ env.KEY }}
+        sudo apt-key add ${{ env.KEY }}
+        rm ${{ env.KEY }}
+        echo "deb https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
+        sudo apt-get update
+        sudo apt-get install ${{ env.PKG }}
+      env:
+        KEY: GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
+        PKG: ${{ env.LINUX_INTEL_COMPONENTS }}
 
     - name: Setup Intel oneAPI environment
       if: ${{ matrix.compiler == 'intel' }}
@@ -251,9 +264,9 @@ jobs:
         python_v: ['3.8', '3.9', '3.10', '3.11', '3.12']
 
         include:
-         - os: macos-latest
-           gcc_v: 12
-           python_v: '3.12'
+        - os: macos-latest
+          gcc_v: 12
+          python_v: '3.12'
     env:
       FC: gfortran
       CC: gcc
@@ -275,7 +288,7 @@ jobs:
         create-args: |
           python=${{ matrix.python_v }}
 
-    - name: Install GCC (OSX)
+    - name: Link pre-installed GCC and FC (macOS)
       if: ${{ contains(matrix.os, 'macos') }}
       run: |
         gfortran_path=$( which gfortran-${{ env.GCC_V }} )
