--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -167,6 +167,10 @@ jobs:
         source /opt/intel/oneapi/setvars.sh
         printenv >> $GITHUB_ENV
 
+    - name: Install build and test dependencies
+      if: ${{ ! contains(matrix.os, 'windows') }}
+      run: pip3 install ${{ env.PIP_PACKAGES }} ${{ env.PIP_EXTRAS }}
+
     - name: Configure build (meson)
       if: ${{ matrix.build == 'meson' }}
       run: >-
