--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,7 +71,7 @@ jobs:
 
     defaults:
       run:
-        shell: ${{ matrix.shell || 'bash' }}
+        shell: ${{ matrix.shell || 'bash -l {0}' }}
 
     env:
       FC: ${{ matrix.compiler == 'intel' && 'ifort' || 'gfortran' }}
@@ -280,6 +280,9 @@ jobs:
     needs:
       - build
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash -l {0}
     strategy:
       fail-fast: false
       matrix:
