--- a/.github/workflows/wheel.yml
+++ b/.github/workflows/wheel.yml
@@ -69,7 +69,7 @@ jobs:
         os:
         - ubuntu-latest
         - windows-latest
-        - macos-13
+        - macos-15-intel
         - macos-14
 
     defaults:
@@ -100,7 +100,7 @@ jobs:
           CIBW_ARCHS_MACOS: ${{ matrix.os == 'macos-14' && 'arm64' || 'x86_64' }}
           CIBW_ENVIRONMENT_MACOS: >
              CC=gcc-14 CXX=g++-14 FC=gfortran-14
-             MACOSX_DEPLOYMENT_TARGET=${{ matrix.os == 'macos-14' && '14.0' || '13.0' }}
+             MACOSX_DEPLOYMENT_TARGET=${{ matrix.os == 'macos-14' && '14.0' || '15.0' }}
           CIBW_BEFORE_ALL_MACOS: brew install gcc@14
           CIBW_BEFORE_BUILD_WINDOWS: choco upgrade mingw && pip install delvewheel
           CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel show {wheel} && delvewheel repair -w {dest_dir} {wheel} --no-mangle-all"
