--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,14 @@ jobs:
         build: [meson, cmake, fpm]
         build-type: [debug]
         compiler: [gnu]
-        version: [10]
+        version: [12]
 
         include:
-        - os: macos-13
+        - os: macos-15-intel
           build: cmake
           build-type: debug
           compiler: gnu
-          version: 10
+          version: 14
 
         - os: ubuntu-latest
           build: meson
@@ -30,11 +30,11 @@ jobs:
           compiler: gnu
           version: 9
 
-        - os: macos-13
+        - os: macos-15-intel
           build: meson
           build-type: debug
           compiler: gnu
-          version: 10
+          version: 14
 
         - os: ubuntu-latest
           build: meson
@@ -68,7 +68,7 @@ jobs:
       FC: ${{ matrix.compiler == 'intel' && 'ifort' || 'gfortran' }}
       CC: ${{ matrix.compiler == 'intel' && 'icc' || 'gcc' }}
       GCC_V: ${{ matrix.version }}
-      PYTHON_V: 3.8
+      PYTHON_V: 3.9
 
     steps:
     - name: Checkout code
@@ -252,7 +252,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        gcc_v: [10]
+        gcc_v: [12]
         python_v: ['3.8', '3.9', '3.10', '3.11', '3.12']
 
     env:
